# coffee-consumption-report

./: .gitignore  README.md  main.py  pyproject.toml
src/coffee_report/: __init__.py  cli.py  csv_reader.py  exceptions.py  models.py  output.py
src/coffee_report/reports/: __init__.py  base.py  clickbait.py  registry.py
tests/: test_cli.py  test_clickbait_report.py  test_csv_reader.py  test_report_registry.py
