[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-consumption-report"
version = "0.1.0"
description = "CLI for building coffee consumption reports from CSV files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
coffee-report = "coffee_report.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
