[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-consumption-report"
version = "0.1.0"
description = "CLI for building coffee consumption reports from CSV files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["tabulate>=0.9.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
coffee-report = "coffee_report.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src/coffee_report --cov-report=term-missing"

[tool.coverage.run]
source = ["src/coffee_report"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]